--- a/index.html
+++ b/index.html
@@ -1090,7 +1090,7 @@
                                         <div class="d-flex">
                                           <img class="img-sm rounded-10" src="images/faces/face1.jpg" alt="profile">
                                           <div class="wrapper ms-3">
-                                            <p class="ms-1 mb-1 fw-bold">Brandon Washington</p>
+                                            <p class="ms-1 mb-1 fw-bold">Nazim shaikh</p>
                                             <small class="text-muted mb-0">162543</small>
                                           </div>
                                         </div>
@@ -1102,7 +1102,7 @@
                                         <div class="d-flex">
                                           <img class="img-sm rounded-10" src="images/faces/face2.jpg" alt="profile">
                                           <div class="wrapper ms-3">
-                                            <p class="ms-1 mb-1 fw-bold">Wayne Murphy</p>
+                                            <p class="ms-1 mb-1 fw-bold">priti</p>
                                             <small class="text-muted mb-0">162543</small>
                                           </div>
                                         </div>
@@ -1114,7 +1114,7 @@
                                         <div class="d-flex">
                                           <img class="img-sm rounded-10" src="images/faces/face3.jpg" alt="profile">
                                           <div class="wrapper ms-3">
-                                            <p class="ms-1 mb-1 fw-bold">Katherine Butler</p>
+                                            <p class="ms-1 mb-1 fw-bold">amin shaikh</p>
                                             <small class="text-muted mb-0">162543</small>
                                           </div>
                                         </div>
@@ -1126,7 +1126,7 @@
                                         <div class="d-flex">
                                           <img class="img-sm rounded-10" src="images/faces/face4.jpg" alt="profile">
                                           <div class="wrapper ms-3">
-                                            <p class="ms-1 mb-1 fw-bold">Matthew Bailey</p>
+                                            <p class="ms-1 mb-1 fw-bold">shahbaaz</p>
                                             <small class="text-muted mb-0">162543</small>
                                           </div>
                                         </div>
@@ -1138,8 +1138,8 @@
                                         <div class="d-flex">
                                           <img class="img-sm rounded-10" src="images/faces/face5.jpg" alt="profile">
                                           <div class="wrapper ms-3">
-                                            <p class="ms-1 mb-1 fw-bold">Rafell John</p>
-                                            <small class="text-muted mb-0">Alaska, USA</small>
+                                            <p class="ms-1 mb-1 fw-bold">sumaiyya</p>
+                                            <small class="text-muted mb-0">12345</small>
                                           </div>
                                         </div>
                                         <div class="text-muted text-small">
